--- a/client/src/App.css
+++ b/client/src/App.css
@@ -256,6 +256,7 @@ img {
   padding: 0.4rem;
   font-size: 1.2rem;
   border: 1px solid #ccc;
+  font-family: 'Raleway', sans-serif;
 }
 
 .form input[type='submit'],
@@ -333,7 +334,8 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url('img/showcase.jpg') no-repeat center center/cover;
+  background: url('img/showcase.jpg') no-repeat center
+    center/cover;
   height: 100vh;
 }
 
@@ -575,4 +577,3 @@ button {
     padding: 0.3rem 0.4rem;
   }
 }
-
